// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Initial Form Data with "BOOM" 1`] = `
<div
  className="reloading"
>
  []
</div>
`;

exports[`Initial Form Data with "WEB" 1`] = `
<div
  className="reloading"
>
  [
  "a",
  "b",
  "c"
]
</div>
`;
